Fix(general): fix some missing stuff